syntax = "proto3";
package myapi;

import "google/api/annotations.proto";

service DocumentService {
 rpc CreateDocument(CreateDocumentRequest) returns (CreateDocumentResponse) {
   option (google.api.http) = { post: "/document" };
 }
 rpc ReadDocument(ReadDocumentRequest) returns (ReadDocumentResponse) {
     option (google.api.http) = { get: "/document/{id}" };
 }
 rpc DeleteDocument(DeleteDocumentRequest) returns (DeleteDocumentResponse) {
     option (google.api.http) = { get: "/document/{id}" };
 }
 rpc SearchDocument(SearchDocumentRequest) returns (SearchDocumentResponse) {
     option (google.api.http) = { get: "/document" };
 }
}

message CreateDocumentRequest {
    Document document = 1;
}

message CreateDocumentResponse {
    Document document = 1;
}

message ReadDocumentRequest {
    string id = 1;
}

message ReadDocumentResponse {
    Document document = 1;
}

message DeleteDocumentRequest {
    string id = 1;
}

message DeleteDocumentResponse {
}

message SearchDocumentRequest {
 message FilterMessage {
   string startDate = 1;
   string endDate = 2;
 }
 FilterMessage filter = 1;
}

message SearchDocumentResponse {
 repeated Document documents = 1;
}

message Document {
  string id = 1;
  string docDate = 2;
  string number = 3;
  string name = 4;
}


